Added Facts to Sun
Included actual facts for the first two sun sections

--- a/index.html
+++ b/index.html
@@ -792,12 +792,12 @@
 
             <div class= "desc-card">
               <h3>1) Massive</h3>
-              <p>Yea it is</p>
+              <p>The Sun accounts for 99.86% of the mass in the solar system. It has a mass of around 330,000 times that of Earth.</p>
 
             </div>
             <div class="desc-card">
-              <h3>2) Fact</h3>
-              <p>More Fact</p>
+              <h3>2) Biggest</h3>
+              <p>Diameter:	1,392,684 km <br> Over one million Earth’s could fit inside the Sun</p>
 
             </div>
             <div class="desc-card">
